--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,17 @@
         <artifactId>jackson-databind</artifactId>
         <version>2.9.4</version>
     </dependency>
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.7.25</version>
+    </dependency>
+    <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>1.2.3</version>
+    </dependency>
+
   </dependencies>
 
     <properties>
